--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!doctype html>
 <title>Precision…</title>
-<meta http-equiv="refresh" content="0; url=https://demo.themovation.com/stratus/home-design-agency/index.html">
+<meta http-equiv="refresh" content="0; url=https://precisionsoftware.github.io/precisionwebsite/demo.themovation.com/stratus/home-design-agency/index.html">
+
